--- a/faucets.html
+++ b/faucets.html
@@ -553,6 +553,17 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/bupdate.png" alt="Bitupdate" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Bitupdate</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.00055+ every 5 mins</li>
+                    <li>$0.03 Min to FaucetPay</li>
+                </ul>
+                <a href="https://bitupdate.info/?r=15908" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/acrypto.png" alt="Aruble.net" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Aruble.net</div>
                 </div>
@@ -561,39 +572,6 @@ body.light-mode .header-subtitle {
                     <li>New Best Faucet</li>
                 </ul>
                 <a href="https://aruble.net/?r=VdQSXcEKfT" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/mix.png" alt="MixFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">MixFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0004+ every 5 mins</li>
-                    <li>Just Like VieFaucet</li>
-                </ul>
-                <a href="https://mixfaucet.com/?r=1109" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/fly.jpeg" alt="Fly Crypto" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Fly Crypto</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0005+ every 5 Minutes</li>
-                    <li>No minimun FaucetPay</li>
-                </ul>
-                <a href="https://fly-crypto.com/?r=243" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/space.png" alt="Spaceshooter" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Spaceshooter</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.00045+ every 5 min</li>
-                    <li>Instant Payment</li>
-                </ul>
-                <a href="https://spaceshooter.net/?r=28035" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -608,14 +586,14 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/bupdate.png" alt="Bitupdate" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Bitupdate</div>
+                    <img src="https://cryptohama.com/images/space.png" alt="Spaceshooter" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Spaceshooter</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>$0.00055+ every 5 mins</li>
-                    <li>$0.03 Min to FaucetPay</li>
+                    <li>$0.00045+ every 5 min</li>
+                    <li>Instant Payment</li>
                 </ul>
-                <a href="https://bitupdate.info/?r=15908" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://spaceshooter.net/?r=28035" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -627,17 +605,6 @@ body.light-mode .header-subtitle {
                     <li>Slow but High Paying</li>
                 </ul>
                 <a href="https://tap-coin.de/refer/user/32631" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/sun.ico" alt="SunFire" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">SunFire</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0015+ every 15 mins</li>
-                    <li>$0.01 to Faucetpay</li>
-                </ul>
-                <a href="https://faucet.sunfirecasino.com/?ref=c71f64bd" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -660,17 +627,6 @@ body.light-mode .header-subtitle {
                     <li>Min $0.03 to FaucetPay</li>
                 </ul>
                 <a href="https://cryptoukr.in.ua/?r=8517" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/coinkeel.png" alt="Coinkeel" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Coinkeel</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0002+ every minute</li>
-                    <li>Min $0.005 Withdrawal</li>
-                </ul>
-                <a href="https://coinkeel.com/?r=cryptohama" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -727,10 +683,6 @@ body.light-mode .header-subtitle {
                 </ul>
                 <a href="https://acryptominer.io?ref=saroj433@gmail.com" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
-        </div>
-
-        <h2 class="section-title">Premium Faucets</h2>
-        <div class="cards">
             <div class="card">
                 <div class="card-header">
                     <img src="https://cryptohama.com/images/final.png" alt="Final Autoclaim" style="width:42px;height:42px;border-radius:50%;">
@@ -753,6 +705,32 @@ body.light-mode .header-subtitle {
                 </ul>
                 <a href="https://faucetcrypto.com/r/51422" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/sf.png" alt="SatoshiFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">SatoshiFaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://satoshifaucet.io/?r=47022" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/bit.png" alt="Bitfaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Bitfaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+        </div>
+
+        <h2 class="section-title">Premium Faucets</h2>
+        <div class="cards">
             <div class="card">
                 <div class="card-header">
                     <img src="https://cryptohama.com/images/lucky.png" alt="LuckyWatch" style="width:42px;height:42px;border-radius:50%;">
@@ -825,41 +803,8 @@ body.light-mode .header-subtitle {
         <div class="cards">
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/doge.png" alt="Blockpulse" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Blockpulse</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>Keep Tab Open</li>
-                    <li>Earn Doge</li>
-                </ul>
-                <a href="https://blockpulse.fun/?ref=3803" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/sf.png" alt="SatoshiFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">SatoshiFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://satoshifaucet.io/?r=47022" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/gamerlee.png" alt="GamerLee" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">GamerLee</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://gamerlee.com/?r=1868" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/coinszone.svg" alt="Coinaszone" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Coinaszone</div>
+                    <img src="https://cryptohama.com/images/coinszone.svg" alt="Coinszone" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Coinszone</div>
                 </div>
                 <ul class="card-bullets">
                     <li>5+ coins</li>
@@ -880,17 +825,6 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/bit.png" alt="Bitfaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Bitfaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/cf.png" alt="CryptoFuture" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">CryptoFuture</div>
                 </div>
@@ -898,7 +832,7 @@ body.light-mode .header-subtitle {
                     <li>10+ coins</li>
                     <li>Easy Captcha</li>
                 </ul>
-                <a href="https://cryptofuture.co.in/?r=8929" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://cryptofuture.co.in/?r=3262" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -939,21 +873,10 @@ body.light-mode .header-subtitle {
                     <div class="card-name">ClaimCrypto</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>LTC every 7 secs</li>
+                    <li>$0.00012 no timer</li>
                     <li>Easy Captcha</li>
                 </ul>
-                <a href="https://claimcrypto.in/?r=2641" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/cvf.jpg" alt="CryptovieFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">CryptovieFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0002 every 10 secs</li>
-                    <li>$0.01 to FaucetPay</li>
-                </ul>
-                <a href="https://cryptoviefaucet.com?ref=136" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://claimcrypto.in/?r=936" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
