--- a/faucets.html
+++ b/faucets.html
@@ -1381,6 +1381,7 @@ body.light-mode .header-subtitle {
         <iframe data-aa='2414637' src='//acceptable.a-ads.com/2414637/?size=Adaptive'
                 style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
     </div>
+    <iframe src="https://coinad.in/ad/banner?size=300x250&ref=daa752ef2e" width="300" height="250" frameborder="0"></iframe>
     
 
     <footer class="footer">
