--- a/faucets.html
+++ b/faucets.html
@@ -564,6 +564,17 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/lr.png" alt="Litecoinrewards" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Litecoinrewards</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0006+ every 5 mins</li>
+                    <li>No min FaucetPay</li>
+                </ul>
+                <a href="https://litecoinrewards.click/?r=1977" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/acrypto.png" alt="Aruble.net" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Aruble.net</div>
                 </div>
@@ -696,17 +707,6 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/fc.png" alt="FaucetCrypto" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">FaucetCrypto</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Multiple coins</li>
-                </ul>
-                <a href="https://faucetcrypto.com/r/51422" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/sf.png" alt="SatoshiFaucet" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">SatoshiFaucet</div>
                 </div>
@@ -752,6 +752,17 @@ body.light-mode .header-subtitle {
                     <li>Minimum $0.5</li>
                 </ul>
                 <a href="https://tapnoon.com/?referralCode=Y4idvu3xVtsaDF4k" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/fc.png" alt="FaucetCrypto" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">FaucetCrypto</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Multiple coins</li>
+                </ul>
+                <a href="https://faucetcrypto.com/r/51422" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
