--- a/faucets.html
+++ b/faucets.html
@@ -586,6 +586,17 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/mix.png" alt="MixFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">MixFaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0004+ every 5 mins</li>
+                    <li>Just Like VieFaucet</li>
+                </ul>
+                <a href="https://mixfaucet.com/?r=1109" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/fpayz.ico" alt="FaucetPayz" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">FaucetPayz</div>
                 </div>
@@ -696,17 +707,6 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/final.png" alt="Final Autoclaim" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Final Autoclaim</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>80+ coins</li>
-                    <li>Multiple Ways to Earn</li>
-                </ul>
-                <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/sf.png" alt="SatoshiFaucet" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">SatoshiFaucet</div>
                 </div>
@@ -731,6 +731,17 @@ body.light-mode .header-subtitle {
 
         <h2 class="section-title">Premium Faucets</h2>
         <div class="cards">
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/final.png" alt="Final Autoclaim" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Final Autoclaim</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>80+ coins</li>
+                    <li>Multiple Ways to Earn</li>
+                </ul>
+                <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <img src="https://cryptohama.com/images/lucky.png" alt="LuckyWatch" style="width:42px;height:42px;border-radius:50%;">
@@ -1392,7 +1403,6 @@ body.light-mode .header-subtitle {
         <iframe data-aa='2414637' src='//acceptable.a-ads.com/2414637/?size=Adaptive'
                 style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
     </div>
- <center>   <iframe src="https://coinad.in/ad/banner?size=300x250&ref=daa752ef2e" width="300" height="250" frameborder="0"></iframe> </center>
     
 
     <footer class="footer">
