--- a/faucets.html
+++ b/faucets.html
@@ -917,6 +917,17 @@ body.light-mode .header-subtitle {
         <div class="cards">
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/btc.png" alt="freebtcco" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">freebtcco</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>2 satoshi</li>
+                    <li>More as you level up</li>
+                </ul>
+                <a href="https://freebtcco.in?ref=50ktSJCFSV" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/easylite.png" alt="EasyLite" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">EasyLite</div>
                 </div>
@@ -1233,17 +1244,6 @@ body.light-mode .header-subtitle {
                     <li>More as you level up</li>
                 </ul>
                 <a href="https://etherking.io/?ref=Cryptohama" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/liteking.svg" alt="Liteking" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Liteking</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>100 sats LTC</li>
-                    <li>More as you level up</li>
-                </ul>
-                <a href="https://liteking.io/?ref=HamaCrypto" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
         </div>
 
