--- a/faucets.html
+++ b/faucets.html
@@ -500,8 +500,8 @@ body.light-mode .header-subtitle {
             <a href="https://faucetpay.io/?r=cryptohama" class="half-cta" target="_blank" rel="noopener">
                 <span>✅</span> Join FaucetPay
             </a>
-            <a href="https://hspay.io/?aff=15630" class="half-cta" target="_blank" rel="noopener">
-                <span>✅</span> Join HSPay
+            <a href="https://cwallet.com/referralweb/qKE9A2L9?type=signup" class="half-cta" target="_blank" rel="noopener">
+                <span>✅</span> Join Cwallet
             </a>
         </div>
 
@@ -928,6 +928,17 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/trx.png" alt="EasyTRX" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">EasyTRX</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>0.00125 TRX</li>
+                    <li>More as you level up</li>
+                </ul>
+                <a href="https://easytrx.io/?ref=cryptohama" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/easylite.png" alt="EasyLite" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">EasyLite</div>
                 </div>
@@ -1200,17 +1211,6 @@ body.light-mode .header-subtitle {
                     <li>More as you level up</li>
                 </ul>
                 <a href="https://bnbking.io/?ref=cryptohama" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/tronking.svg" alt="TronKing" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">TronKing</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>0.005 TRX</li>
-                    <li>More as you level up</li>
-                </ul>
-                <a href="https://tronking.io/?ref=cryptohama" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
