--- a/faucets.html
+++ b/faucets.html
@@ -597,6 +597,17 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/fly.jpeg" alt="Fly Crypto" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Fly Crypto</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0005+ every 5 Minutes</li>
+                    <li>No minimun FaucetPay</li>
+                </ul>
+                <a href="https://fly-crypto.com/?r=243" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/fpayz.ico" alt="FaucetPayz" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">FaucetPayz</div>
                 </div>
@@ -715,17 +726,6 @@ body.light-mode .header-subtitle {
                     <li>Easy Captcha</li>
                 </ul>
                 <a href="https://satoshifaucet.io/?r=47022" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/bit.png" alt="Bitfaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Bitfaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
         </div>
 
@@ -1157,6 +1157,17 @@ body.light-mode .header-subtitle {
 
         <h2 class="section-title">No Timer</h2>
         <div class="cards">
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/bit.png" alt="Bitfaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Bitfaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <img src="https://cryptohama.com/images/coinszone.svg" alt="Coinszone" style="width:42px;height:42px;border-radius:50%;">
