--- a/faucets.html
+++ b/faucets.html
@@ -597,17 +597,6 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/fly.jpeg" alt="Fly Crypto" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Fly Crypto</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0005+ every 5 Minutes</li>
-                    <li>No minimun FaucetPay</li>
-                </ul>
-                <a href="https://fly-crypto.com/?r=243" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/fpayz.ico" alt="FaucetPayz" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">FaucetPayz</div>
                 </div>
@@ -660,6 +649,17 @@ body.light-mode .header-subtitle {
                     <li>Min $0.03 to FaucetPay</li>
                 </ul>
                 <a href="https://cryptoukr.in.ua/?r=8517" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/frw.ico" alt="Fundsreward" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Fundsreward</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0005+ every 8 mins</li>
+                    <li>PTC, Shortlinks, Offerwalls</li>
+                </ul>
+                <a href="https://fundsreward.com/?r=32249" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
