--- a/faucets.html
+++ b/faucets.html
@@ -513,10 +513,21 @@ body.light-mode .header-subtitle {
                     <div class="card-name">Freeltc</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>$0.0007+ every 4mins</li>
+                    <li>$0.0007+ every 4 mins</li>
                     <li>Highest Paying Easy</li>
                 </ul>
                 <a href="https://freeltc.online/?r=11400" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/pi.png" alt="Pitasks" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Pitasks</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.00065+ every 5 mins</li>
+                    <li>New and Easy</li>
+                </ul>
+                <a href="https://pitasks.com/register?ref=1036" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -553,17 +564,6 @@ body.light-mode .header-subtitle {
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/lr.png" alt="Litecoinrewards" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Litecoinrewards</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>$0.0005+ every 5 mins</li>
-                    <li>No min FaucetPay</li>
-                </ul>
-                <a href="https://litecoinrewards.click/?r=1977" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/acrypto.png" alt="Aruble.net" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Aruble.net</div>
                 </div>
@@ -572,6 +572,17 @@ body.light-mode .header-subtitle {
                     <li>New Best Faucet</li>
                 </ul>
                 <a href="https://aruble.net/?r=VdQSXcEKfT" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/lr.png" alt="Litecoinrewards" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Litecoinrewards</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.0005+ every 5 mins</li>
+                    <li>No min FaucetPay</li>
+                </ul>
+                <a href="https://litecoinrewards.click/?r=1977" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -715,17 +726,6 @@ body.light-mode .header-subtitle {
                     <li>Manual Payment</li>
                 </ul>
                 <a href="https://acryptominer.io?ref=saroj433@gmail.com" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://cryptohama.com/images/sf.png" alt="SatoshiFaucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">SatoshiFaucet</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>Easy Captcha</li>
-                </ul>
-                <a href="https://satoshifaucet.io/?r=47022" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
         </div>
 
@@ -1167,6 +1167,17 @@ body.light-mode .header-subtitle {
                     <li>Easy Captcha</li>
                 </ul>
                 <a href="https://bitfaucet.net/?r=1121" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/sf.png" alt="SatoshiFaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">SatoshiFaucet</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>Easy Captcha</li>
+                </ul>
+                <a href="https://satoshifaucet.io/?r=47022" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
